# towbintools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  towbintools.rst  towbintools_classification.rst  towbintools_data_analysis.rst  towbintools_deep_learning.rst  towbintools_foundation.rst  towbintools_plotting.rst  towbintools_quantification.rst  towbintools_segmentation.rst  towbintools_straightening.rst
towbintools/: __init__.py
towbintools/classification/: __init__.py  classification_tools.py  qc_tools.py
towbintools/data_analysis/: __init__.py  growth_rate.py  test_data_analysis.ipynb  time_series.py
towbintools/deep_learning/: __init__.py  clean_training_data.py  deep_learning_tools.py  predict.py  predict.sh  t.ipynb  test.ipynb  test.py  test_network.ipynb  test_network.py  train.sh  train_network.py  visual_network_test.ipynb
towbintools/deep_learning/architectures/: __init__.py  archs.py  models.py
towbintools/deep_learning/ilastik_like/: compare_features.ipynb  ilastik_lightning.ipynb  micronet_transfer_learning.ipynb  train.py  trained_model.json
towbintools/deep_learning/utils/: __init__.py  augmentation.py  dataset.py  loss.py  util.py
towbintools/foundation/: backbone.py  binary_image.py  detect_molts.py  file_handling.py  image_handling.py  image_quality.py  keypoint_detection.py  utils.py  worm_features.py  zstack.py
towbintools/legacy_straightening/: straighten.py  straightening_tools.py
towbintools/plotting/: boxplots.py  curves.py  heterogeneity.py  images.py  plotting_structure.py  proportions.py  utils_data_processing.py  utils_plotting.py
towbintools/quantification/: __init__.py  quantification_tools.py  quatification_tools.py
towbintools/segmentation/: __init__.py  segmentation_tools.py
towbintools/straightening/: __init__.py  straightening_tools.py
