[project]
name = "towbintools"
version = "0.3.8"
authors = [
  {name="Sacha Psalmon", email="sacha.psalmon@unibe.ch" },
  {name="Boris Gusev", email="boris.gusev@unibe.ch" }
]
maintainers = [
    {name = "Sacha Psalmon", email="sacha.psalmon@unibe.ch"},
]
description = "All the tools used by the Towbin Lab !"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch",
    "pytorch-lightning",
    "torchmetrics",
    "pytorch-toolbelt",
    "segmentation-models-pytorch",
    "timm",
    "albumentations",
    "csbdeep",

    "scikit-learn",
    "xgboost",
    "joblib",

    "opencv-contrib-python",
    "scikit-image",
    "tifffile",

    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "scipy",
    "ome-types",

    "whittaker-eilers",
]

[project.optional-dependencies]
dev=[
    "black",
    "isort",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
